started front end calendar

--- a/src/styles/master.sass
+++ b/src/styles/master.sass
@@ -1,3 +1,35 @@
-.welcome
-  text-align: center
-  margin-top: 200px
+body
+  background: hotpink
+
+.full button span
+    background-color: limegreen
+    border-radius: 32px
+    color: black
+
+.partially button span
+    background-color: orange
+    border-radius: 32px
+    color: black
+
+.btn-sm
+  font-size: 35px
+
+.btn
+  font-size: 35px
+
+.uib-daypicker
+  height: 90vh
+  width: 80vw
+  margin: auto
+
+.uib-monthpicker
+  height: 90vh
+  width: 80vw
+  margin: auto
+
+.well
+  margin: 50px auto 15px auto
+
+.table-container
+  display:flex
+  // min-height:290px
