add modal with options for curriculum

--- a/src/styles/master.sass
+++ b/src/styles/master.sass
@@ -1,35 +1,23 @@
-body
-  background: hotpink
 
-.full button span
-    background-color: limegreen
-    border-radius: 32px
-    color: black
+.site-container
+  display: flex
+  justify-content: center
 
-.partially button span
-    background-color: orange
-    border-radius: 32px
-    color: black
+.calendar-container
+  border: 1px blue solid
+  width: 75vw
+  height: 100vh
 
-.btn-sm
-  font-size: 35px
+.options-container
+  display: flex
+  justify-content: flex-start
 
-.btn
-  font-size: 35px
 
-.uib-daypicker
-  height: 90vh
-  width: 80vw
-  margin: auto
+.week-container
+  display: flex
+  justify-content: center
 
-.uib-monthpicker
-  height: 90vh
-  width: 80vw
-  margin: auto
-
-.well
-  margin: 50px auto 15px auto
-
-.table-container
-  display:flex
-  // min-height:290px
+  .week
+    height: 20vh
+    width: 20vh
+    background: salmon
