--- a/src/styles/master.sass
+++ b/src/styles/master.sass
@@ -1,3 +1,13 @@
-.welcome
+html
+  font-family: 'Arial', sans-serif
+
+header
+  height: 50px
+  margin-bottom: 50px
+  background-color: darkblue
   text-align: center
-  margin-top: 200px
+  color: white
+  h2
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
